# mpls.bike

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  mise.toml  pyproject.toml  report.html
.github/workflows/: sync.yml
calendar_sync/: __init__.py  calendar.py  claude.py  cli.py  db.py  fetch_events.py  models.py  prefilter.py  report.py  rss.py
scripts/: pull_db.py  push_db.py  s3_config.py
tests/: test_augment_recurring_event.py
website/: FEATURES.md  hugo.toml  package-lock.json  package.json  report.html
website/assets/css/: main.css
website/assets/js/: main.js
website/content/: _index.md
website/data/: events.json  links.yml
website/layouts/: index.html
website/layouts/_default/: baseof.html
website/layouts/_partials/: tag.html
website/layouts/events/: list.html  single.html
website/static/css/: style.css
